create thesis monitoring dashboard for spesific role
